--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "camera-pixi",
-  "version": "0.1.0",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -30,12 +30,14 @@
     "@babel/preset-typescript": "^7.8.3",
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/d3-ease": "^1.0.9",
     "pixi.js": "^5.2.1",
     "rollup": "^1.31.1",
     "rollup-plugin-babel": "^4.3.3",
     "typescript": "^3.7.5"
   },
   "dependencies": {
+    "d3-ease": "^1.0.6",
     "hypergiant": "^3.0.4"
   }
 }
