--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pixi-game-camera",
-  "version": "0.2.2",
-  "description": "A non-opinioned implementation for adding cameras to your PIXI application via containers.",
+  "version": "1.0.0",
+  "description": "A flexible and non-opinionated way to add camera effects to your PIXI application via containers.",
   "main": "index.js",
   "scripts": {
     "rm:lib": "rm -rf lib",
@@ -14,8 +14,7 @@
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
     "bundle": "npm run rm:bundle && rollup -c",
     "bundle:watch": "rollup -c --watch",
-    "test": "node test/server.js",
-    "test:custom": "node test/server.js"
+    "test": "node test/server.js"
   },
   "repository": {
     "type": "git",
@@ -45,18 +44,20 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@pixi/core": "^5.3.3",
+    "@pixi/display": "^5.3.3",
+    "@pixi/sprite": "^5.3.3",
+    "@pixi/ticker": "^5.3.3",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/d3-ease": "^2.0.0",
     "fastify": "^3.5.0",
     "fastify-static": "^3.2.0",
-    "pixi.js": "^5.3.3",
     "rollup": "^2.28.2",
-    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "d3-ease": "^2.0.0",
     "hypergiant": "^3.1.0"
   }
 }
